--- a/css/index.css
+++ b/css/index.css
@@ -1,40 +1,34 @@
 #giant {
-    width: 95%;
-    display: block;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+  height: 650px;
+  display: block;
   margin-bottom: 50px;
 }
 
-.card {
-  width: 150px;
-  height: 200px;
+.character-card {
+  width: 300px;
+  height: 400px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin:  0 50px 20px 40px;
+  margin:  0 50px 50px 40px;
+  border: "none";
+  padding: 20px 10px 30px 10px;
+  text-align: center;
+  transition-duration: 0.3s;
+  overflow: scroll;
 }
 
-.gridcontainer img{ 
-  display: block; 
-  height: 400px; 
-  width: 322px; 
-  object-fit: cover; 
-  object-position: center; 
-  margin-left: auto;
-  margin-right: auto;
+.character-image{ 
+  max-width: 100%;
+  max-height: 100%;
 }
+
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto auto;
 }
-.character-card {
-  border: "none";
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
-  text-align: center;
-  transition-duration: 0.3s;
-}
+
+
+
 .character-card:hover {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -43,6 +37,41 @@
   text-align: center;
   background-color: rgb(217, 217, 223);
 }
+
+
+
+ 
+
+
+
+#direction-container {
+  align-content: center;
+  padding: 75px 0px 125px 0px;
+
+}
+
+h2 {
+  /* font-family: ; */
+  font-size: 40px;
+
+}
+
+h1 {
+  text-align: center;
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+  font-weight: thick; 
+  padding-bottom: 40px;
+
+}
+
+#direction-container p {
+  text-align: center;
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+  font-size: 25px;
+  padding: 0px 300px 0px 300px;
+  line-height: 50px;
+}
+
 button {
   background-color: rgb(114, 113, 113); 
   border: none;
